Upgraded to MIO

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 rustls = "0.18.1"
 http = "0.2.1"
 mime_guess = "2.0.3"
+mio = { version = "0.7.2", features = ["os-poll", "tcp"] }
