--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,11 @@ http = "0.2.1"
 mime_guess = "2.0.3"
 mio = { version = "0.7.2", features = ["os-poll", "tcp"] }
 num_cpus = "1.13.0"
+
+[features]
+default = ["templates", "php"]
+
+# Enables the template extention
+templates = []
+# Enables PHP interpretation of files
+php = []
