Added no cache option and improved Storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ default = ["templates", "php"]
 templates = []
 # Enables PHP interpretation of files
 php = []
+# Disables the cache
+no-cache = []
