Experimented with index.html

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ http = "0.2.1"
 mime_guess = "2.0.3"
 mio = { version = "0.7.2", features = ["os-poll", "tcp"] }
 num_cpus = "1.13.0"
+mime = "0.3.16"
 
 [features]
 default = ["templates", "php"]
