--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,24 @@ mime_guess = "2.0.3"
 mio = { version = "0.7.2", features = ["os-poll", "tcp"] }
 num_cpus = "1.13.0"
 mime = "0.3.16"
+brotli = { version = "3.3.0", optional = true }
+flate2 = { version = "1.0.18", optional = true }
 
 [features]
-default = ["templates", "php"]
+default = ["templates", "php", "compression"]
 
 # Enables the template extention
 templates = []
 # Enables PHP interpretation of files
 php = []
+
 # Disables the cache
 no-fs-cache = []
 no-response-cache = []
 no-template-cache = []
 no-cache = ["no-fs-cache", "no-response-cache", "no-template-cache"]
+
+# Compressing
+compression = ["br", "gzip"]
+br = ["brotli"]
+gzip = ["flate2"]
