Moved server binary to separate crate and git

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "arktis"
 version = "0.1.0"
-authors = ["Iselk <62830417+Iselk@users.noreply.github.com>"]
+authors = ["Icelk"]
 edition = "2018"
+homepage = "https://icelk.dev/arktis/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+members = [
+  "./",
+  "arktis_extensions",
+]
 
 [dependencies]
 rustls = "0.18.1"
