Added back all previous extension functionality to arktis_extensions crate

--- a/arktis_extensions/Cargo.toml
+++ b/arktis_extensions/Cargo.toml
@@ -11,5 +11,6 @@ arktis = { path = "../" }
 fastcgi-client = { version = "0.5.0", default-features = false, optional = true }
 
 [features]
-default = ["php"]
+default = ["php", "templates"]
 php = ["fastcgi-client"]
+templates = []
