Updated arktis_extensions to not include arktis default features

--- a/arktis_extensions/Cargo.toml
+++ b/arktis_extensions/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arktis = { path = "../" }
+arktis = { path = "../", default-features = false }
 fastcgi-client = { version = "0.5.0", default-features = false, optional = true }
 
 [features]
