Added request limiting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,12 @@ brotli = { version = "3.3.0", optional = true }
 flate2 = { version = "1.0.18", optional = true }
 
 [features]
-default = ["compression", "fs"]
+default = ["compression", "fs", "limiting"]
 
 # Enables the server to serve from the file system
 fs = []
+# Enables limits on the server, to avoid abusive usage by counting IP requests
+limiting = []
 
 # Disables the cache
 no-fs-cache = []
