--- a/kvarn_extensions/Cargo.toml
+++ b/kvarn_extensions/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "arktis_extensions"
+name = "kvarn_extensions"
 version = "0.1.0"
-authors = ["Icelk"]
+authors = ["Icelk <main@icelk.dev>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arktis = { path = "../", default-features = false }
+kvarn = { path = "../", default-features = false }
 fastcgi-client = { version = "0.5.0", default-features = false, optional = true }
 
 [features]
