--- a/kvarn_chute/Cargo.toml
+++ b/kvarn_chute/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pulldown-cmark = "0.8.0"
+pulldown-cmark = { version = "0.8", default-features = false }
