--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ brotli = { version = "3.3", optional = true }
 flate2 = { version = "1", optional = true }
 
 [features]
-default = ["compression", "fs", "limiting", "log"]
+default = ["compression", "fs", "limiting", "error-log"]
 
 # Enable logging
 log = ["info-log", "error-log"]
