--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
 ]
 
 [dependencies]
-rustls = "0.18"
+rustls = "0.19"
 http = "0.2"
 mime_guess = "2"
 mio = { version = "0.7", features = ["os-poll", "tcp"] }
@@ -23,6 +23,7 @@ num_cpus = "1.13"
 mime = "0.3"
 brotli = { version = "3.3", optional = true }
 flate2 = { version = "1", optional = true }
+webpki = "0.21"
 
 [features]
 default = ["compression", "fs", "limiting", "error-log"]
