--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ mime = "0.3"
 mime_guess = "2"
 brotli = { version = "3.3", optional = true }
 flate2 = { version = "1", optional = true }
+tokio-rustls = "0.22.0"
+futures-util = "0.3.12"
 
 [features]
 default = ["compression", "fs", "limiting"]
