--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ brotli = { version = "3.3", optional = true }
 flate2 = { version = "1", optional = true }
 tokio-rustls = "0.22.0"
 futures-util = "0.3.12"
+h2 = "0.3.0"
+bytes = "1.0.1"
 
 [features]
 default = ["compression", "fs", "limiting"]
