--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tokio-rustls = "0.22.0"
 futures-util = "0.3.12"
 h2 = "0.3.0"
 bytes = "1.0.1"
+futures = "0.3.12"
 
 [features]
 default = ["compression", "fs", "limiting"]
