--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,12 @@ brotli = { version = "3.3", optional = true }
 flate2 = { version = "1", optional = true }
 tokio-rustls = "0.22.0"
 futures-util = "0.3.12"
-h2 = "0.3.0"
+h2 = { version = "0.3.0", optional = true }
 bytes = "1.0.1"
 futures = "0.3.12"
 
 [features]
-default = ["compression", "fs", "limiting"]
+default = ["compression", "fs", "limiting", "http2"]
 
 # Enables the server to serve from the file system
 fs = []
@@ -48,3 +48,5 @@ no-cache = ["no-fs-cache", "no-response-cache", "no-template-cache"]
 compression = ["br", "gzip"]
 br = ["brotli"]
 gzip = ["flate2"]
+
+http2 = ["h2"]
