--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,20 +15,18 @@ members = [
 ]
 
 [dependencies]
-rustls = "0.19"
-tokio = { version = "1.2.0", features = ["rt-multi-thread", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
-webpki = "0.21"
-log = "0.4.14"
-http = "0.2"
-mime = "0.3"
-mime_guess = "2"
-brotli = { version = "3.3", optional = true }
-flate2 = { version = "1", optional = true }
-tokio-rustls = "0.22.0"
-futures-util = "0.3.12"
-h2 = { version = "0.3.0", optional = true }
-bytes = "1.0.1"
-futures = "0.3.12"
+rustls = "^0.19"
+tokio = { version = "^1", features = ["rt-multi-thread", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+webpki = "^0.21"
+log = "^0.4"
+http = "^0.2"
+mime = "^0.3"
+mime_guess = "^2"
+brotli = { version = "^3", optional = true }
+flate2 = { version = "^1", optional = true }
+h2 = { version = "^0.3", optional = true }
+bytes = "^1"
+futures = "^0.3"
 
 [features]
 default = ["compression", "fs", "limiting", "http2"]
