--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,21 +15,21 @@ members = [
 ]
 
 [dependencies]
-rustls = "^0.19"
-tokio = { version = "^1", features = ["rt-multi-thread", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
-webpki = "^0.21"
+bytes = "^1"
+rustls = { version = "^0.19", optional = true }
+webpki = { version = "^0.21", optional = true }
+tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+futures = "^0.3"
 log = "^0.4"
 http = "^0.2"
 mime = "^0.3"
 mime_guess = "^2"
 brotli = { version = "^3", optional = true }
 flate2 = { version = "^1", optional = true }
-h2 = { version = "^0.3", optional = true }
-bytes = "^1"
-futures = "^0.3"
+h2 = { version = "^0.3", default-features = false, optional = true }
 
 [features]
-default = ["compression", "fs", "limiting", "http2"]
+default = ["https", "http2", "compression", "fs", "limiting"]
 
 # Enables the server to serve from the file system
 fs = []
@@ -47,4 +47,9 @@ compression = ["br", "gzip"]
 br = ["brotli"]
 gzip = ["flate2"]
 
+# HTTP standards
+https = ["rustls", "webpki"]
 http2 = ["h2"]
+
+# Multi threading
+mt = ["tokio/rt-multi-thread"]
