--- a/kvarn_chute/Cargo.toml
+++ b/kvarn_chute/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
-notify = "4.0.15"
+pulldown-cmark = { version = "^0.8", default-features = false, features = ["simd"] }
+notify = "^4"
