--- a/kvarn_extensions/Cargo.toml
+++ b/kvarn_extensions/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 kvarn = { path = "../", default-features = false }
 fastcgi-client = { git = "https://github.com/Iselk/fastcgi-client-rs", optional = true }
-tokio = { version = "1", optional = true, features = ["net", "io-util"] }
+tokio = { version = "^1", optional = true, features = ["net", "io-util"] }
 url_crawl = { path = "../url_crawl", optional = true }
 
 [features]
