--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Icelk <main@icelk.dev>"]
 edition = "2018"
 description = "An extensible and forward-thinking web server for the future."
 homepage = "https://kvarn.org/"
-repository = "https://github.com/Iselk/kvarn/"
+repository = "https://github.com/Icelk/kvarn/"
 license = "Apache-2.0"
 keywords = ["web", "web-server", "web-application", "web-framework"]
 categories = ["web-programming", "web-programming::http-server"]
