Tried to make a reverse proxy. WebSockets don't work and I have as much clue as a toddler. May the mighty rusty craps descend upon us.

--- a/kvarn_extensions/Cargo.toml
+++ b/kvarn_extensions/Cargo.toml
@@ -16,6 +16,7 @@ kvarn = { path = "../", default-features = false }
 fastcgi-client = { git = "https://github.com/Icelk/fastcgi-client-rs", optional = true }
 tokio = { version = "^1", optional = true, features = ["net", "io-util"] }
 url_crawl = { path = "../url_crawl", optional = true }
+chunked_transfer = "1.4.0"
 
 [features]
 default = ["php", "templates", "push"]
