--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ flate2 = { version = "^1", optional = true }
 h2 = { version = "^0.3", default-features = false, optional = true }
 
 [features]
-default = ["https", "http2", "compression", "fs", "limiting"]
+default = ["https", "http2", "compression", "fs", "limiting", "graceful-shutdown"]
 
 # Enables the server to serve from the file system
 fs = []
@@ -57,3 +57,6 @@ http2 = ["h2", "https"]
 
 # Multi threading
 mt = ["tokio/rt-multi-thread"]
+
+# Graceful shutdown; shutdown.rs
+graceful-shutdown = []
