--- a/kvarn_extensions/Cargo.toml
+++ b/kvarn_extensions/Cargo.toml
@@ -23,3 +23,4 @@ default = ["php", "templates", "push"]
 php = ["fastcgi-client", "tokio"]
 templates = []
 push = ["url_crawl"]
+reverse-proxy = ["tokio"]
