Added tags to Kvarn Chute. Typing ${date} in a document will convert to the current date of formatting. This can be useful when creating articles. This actually worked on the first try. Didn't have to do any debugging. And it's midnight. And I've not drank any coffee!

--- a/kvarn_chute/Cargo.toml
+++ b/kvarn_chute/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 pulldown-cmark = { version = "^0.8", default-features = false, features = ["simd"] }
 notify = "^4"
+chrono = { version = "0.4.19", optional = true }
+
+[features]
+default = ["date"]
+date = ["chrono"]
