--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,18 +20,19 @@ members = [
 ]
 
 [dependencies]
+brotli = { version = "^3", optional = true }
 bytes = "^1"
-rustls = { version = "^0.19", optional = true }
-webpki = { version = "^0.21", optional = true }
-tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+chrono = "^0.4"
+flate2 = { version = "^1", optional = true }
 futures = "^0.3"
-log = "^0.4"
+h2 = { version = "^0.3", default-features = false, optional = true }
 http = "^0.2"
+log = "^0.4"
 mime = "^0.3"
 mime_guess = "^2"
-brotli = { version = "^3", optional = true }
-flate2 = { version = "^1", optional = true }
-h2 = { version = "^0.3", default-features = false, optional = true }
+rustls = { version = "^0.19", optional = true }
+tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
+webpki = { version = "^0.21", optional = true }
 
 [features]
 default = ["https", "http2", "compression", "fs", "limiting", "graceful-shutdown"]
