--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,22 +17,22 @@ members = [
   "./",
   "kvarn_extensions",
   "kvarn_chute",
+  "core",
+  "async",
+  "utils",
 ]
 
 [dependencies]
 brotli = { version = "^3", optional = true }
-bytes = "^1"
 chrono = "^0.4"
 flate2 = { version = "^1", optional = true }
-futures = "^0.3"
 h2 = { version = "^0.3", default-features = false, optional = true }
-http = "^0.2"
-log = "^0.4"
+kvarn_core = { path = "core" }
+kvarn_async = { path = "async" }
+kvarn_utils = { path = "utils" }
 mime = "^0.3"
 mime_guess = "^2"
-rustls = { version = "^0.19", optional = true }
 tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
-webpki = { version = "^0.21", optional = true }
 
 [features]
 default = ["https", "http2", "compression", "fs", "limiting", "graceful-shutdown"]
@@ -53,7 +53,7 @@ br = ["brotli"]
 gzip = ["flate2"]
 
 # HTTP standards
-https = ["rustls", "webpki"]
+https = ["kvarn_core/https"]
 http2 = ["h2", "https"]
 
 # Multi threading
