--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,11 @@ rustls = { version = "^0.19", optional = true }
 tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
 webpki = { version = "^0.21", optional = true }
 
+# For documenting test module
+reqwest = { version = "^0.11", optional = true }
+rand = { version = "^0.8", optional = true }
+rcgen = { version = "^0.8", optional = true }
+
 [features]
 default = ["https", "http2", "compression", "fs", "limiting", "graceful-shutdown"]
 
@@ -65,3 +70,11 @@ mt = ["tokio/rt-multi-thread"]
 
 # Graceful shutdown; shutdown.rs
 graceful-shutdown = []
+
+doc-tests = ["reqwest", "rand", "tokio/macros"]
+
+[dev-dependencies]
+reqwest = { version = "^0.11" }
+rand = "^0.8"
+rcgen = "^0.8"
+tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time", "macros"] }
