Fixed several bugs in Chute and made critical improvements. This completely changed how harsh accepting headers is. It now accepts [] {} and all other puncuation, according to the crate unicode_categories.

--- a/kvarn_chute/Cargo.toml
+++ b/kvarn_chute/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 pulldown-cmark = { version = "^0.8", default-features = false, features = ["simd"] }
 notify = "^4"
+unicode_categories = "^0.1"
 chrono = { version = "^0.4", optional = true }
 
 [features]
