Renamed kvarn_extensions to extensions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["web-programming", "web-programming::http-server"]
 [workspace]
 members = [
   "./",
-  "kvarn_extensions",
+  "extensions",
   "kvarn_chute",
   "utils",
   "async",
