--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ kvarn_async = { path = "async" }
 log = "^0.4"
 mime = "^0.3"
 mime_guess = "^2"
+percent-encoding = "^2.1.0"
 rustls = { version = "^0.19", optional = true }
 tokio = { version = "^1", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
 webpki = { version = "^0.21", optional = true }
