Fixed main workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,7 @@ on:
     push:
         paths-ignore:
             - "extensions/**"
-        paths:
-            - "**.rs"
-            - "**.toml"
+            - "chute/**"
 
 env:
     CARGO_TERM_COLOR: always
