--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -29,6 +29,10 @@ jobs:
               with:
                   command: clippy
                   args: --all-targets --all-features -- -D warnings
+            - name: Testing
+              uses: actions-rs/cargo@v1
+              with:
+                  command: test
 
     build:
         needs: [check]
