--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,11 @@ jobs:
             - uses: Swatinem/rust-cache@v1
             - name: Installing clippy
               run: rustup component add clippy
+            - name: Running rustfmt
+              uses: actions-rs/cargo@v1
+              with:
+                  command: fmt
+                  args: -- --check
             - name: Checking project
               uses: actions-rs/cargo@v1
               with:
