--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -34,6 +34,8 @@ jobs:
               with:
                   command: clippy
                   args: --all-targets --all-features -- -D warnings
+            - name: Checking doc references
+              run: test -z "$(cargo doc --no-deps -q 2>&1 | head -n 1)"
             - name: Testing
               uses: actions-rs/cargo@v1
               with:
