--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -54,7 +54,8 @@ jobs:
                   override: true
             - name: Checking out sources
               uses: actions/checkout@v1
-            - name: Checking Rust code
+            - uses: Swatinem/rust-cache@v1
+            - name: Compiling
               uses: actions-rs/cargo@v1
               with:
                   command: rustc
