Testing extension and chute CI. Fixed artefact locations.

--- a/.github/workflows/chute.yml
+++ b/.github/workflows/chute.yml
@@ -53,4 +53,4 @@ jobs:
               uses: actions/upload-artifact@v2
               with:
                   name: chute
-                  path: /target/release/kvarn_chute
+                  path: ../target/release/kvarn_chute
