--- a/.github/workflows/chute.yml
+++ b/.github/workflows/chute.yml
@@ -49,6 +49,8 @@ jobs:
               with:
                   command: rustc
                   args: --release
+            - name: Change directory to git root
+              run: cd ..
             - name: Upload bin artefact
               uses: actions/upload-artifact@v2
               with:
