--- a/.github/workflows/chute.yml
+++ b/.github/workflows/chute.yml
@@ -55,4 +55,4 @@ jobs:
               uses: actions/upload-artifact@v2
               with:
                   name: chute
-                  path: ../target/release/kvarn_chute
+                  path: target/release/kvarn_chute
