--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -61,7 +61,7 @@ jobs:
                   command: rustc
                   args: --release -- --crate-type rlib
             - name: List files
-              run: ls -R
+              run: pwd && ls -R ..
             - name: Upload rlib artefact
               uses: actions/upload-artifact@v2
               with:
