--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -2,8 +2,10 @@ name: Extensions Continuous Integration
 
 on:
     push:
-        paths:
-            - "extensions/**"
+        paths-ignore:
+            - "chute/**"
+            - "tests/**"
+            - "testing/**"
 
 env:
     CARGO_TERM_COLOR: always
