--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -7,6 +7,9 @@ on:
             - "tests/**"
             - "testing/**"
             - ".github/workflows/chute.yml"
+            - "README.md"
+            - "roadmap.md"
+            - "LICENSE"
 
 env:
     CARGO_TERM_COLOR: always
