--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,5 @@ version: 2
 updates:
     - package-ecosystem: "cargo"
       directory: "/"
-      schedule: "daily"
+      schedule:
+          interval: "daily"
