Workflows now don't run on dependabot changes.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
             - "url_crawl/**"
             - ".github/workflows/chute.yml"
             - ".github/workflows/extensions.yml"
+            - ".github/dependabot.yml"
             - "README.md"
             - "roadmap.md"
             - "LICENSE"
