--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -7,6 +7,7 @@ on:
             - "tests/**"
             - "testing/**"
             - ".github/workflows/chute.yml"
+            - ".github/dependabot.yml"
             - "README.md"
             - "roadmap.md"
             - "LICENSE"
