Added metadata in utils crate.

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -3,8 +3,14 @@ name = "kvarn_utils"
 version = "0.3.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+rust-version = "1.56"
+description = "HTTP and Rust utilities used in the Kvarn web server."
+readme = "README.md"
+homepage = "https://kvarn.org/"
+repository = "https://github.com/Icelk/kvarn/"
+license = "Apache-2.0"
+keywords = ["web-server", "utilities"]
+categories = ["web-programming", "parsing"]
 
 [dependencies]
 log = "^0.4"
