Added metadata to async crate.

--- a/async/Cargo.toml
+++ b/async/Cargo.toml
@@ -3,11 +3,17 @@ name = "kvarn_async"
 version = "0.3.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+rust-version = "1.56"
+description = "Async utilities used in the Kvarn web server."
+readme = "README.md"
+homepage = "https://kvarn.org/"
+repository = "https://github.com/Icelk/kvarn/"
+license = "Apache-2.0"
+keywords = ["web-server", "utilities"]
+categories = ["web-programming", "asynchronous"]
 
 [dependencies]
 bytes = "^1"
 http = "^0.2"
-kvarn_utils = { path = "../utils" }
+kvarn_utils = "^0.3"
 tokio = { version = "^1.13", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
