--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kvarn = { path = "../", features = ["full"] }
+# kvarn = { path = "../", features = ["full"] }
+kvarn = { version = "^0.3", features = ["full"] }
 reqwest = { version = "^0.11" }
 rand = "^0.8"
 rcgen = "^0.8"
