--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "kvarn_testing"
 version = "0.3.0"
+authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+rust-version = "1.56"
+description = "Testing framework used by the Kvarn web server."
+readme = "README.md"
+homepage = "https://kvarn.org/"
+repository = "https://github.com/Icelk/kvarn/"
+license = "Apache-2.0"
+categories = ["web-programming", "development-tools::testing"]
 
 [dependencies]
 # kvarn = { path = "../", features = ["full"] }
