--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -12,8 +12,9 @@ categories = ["template-engine"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kvarn = { path = "../", default-features = false }
-fastcgi-client = { git = "https://github.com/Icelk/fastcgi-client-rs", optional = true }
+# kvarn = { path = "../", default-features = false }
+kvarn = { version = "^0.3", default-features = false }
+fastcgi-client = { version = "^0.1", optional = true }
 tokio = { version = "^1.13", optional = true, features = ["net", "io-util"] }
 url_crawl = { path = "../url_crawl", optional = true }
 async_chunked_transfer = "^1.4"
@@ -27,4 +28,5 @@ reverse-proxy = ["tokio"]
 
 [dev-dependencies]
 tokio = { version = "^1.13", features = ["net", "io-util", "macros"] }
-kvarn_testing = { path = "../testing" }
+# kvarn_testing = { path = "../testing" }
+kvarn_testing = "^0.3"
