--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kvarn_extensions"
+name = "kvarn-extensions"
 version = "0.3.0"
 authors = ["Icelk <main@icelk.dev>"]
 edition = "2021"
