--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -12,8 +12,8 @@ license = "Apache-2.0"
 categories = ["web-programming", "development-tools::testing"]
 
 [dependencies]
-# kvarn = { path = "../", features = ["full"] }
-kvarn = { version = "^0.3", features = ["full"] }
+kvarn = { path = "../", features = ["full"] }
+# kvarn = { version = "^0", features = ["full"] }
 reqwest = { version = "^0.11" }
 rand = "^0.8"
 rcgen = "^0.8"
