--- a/async/Cargo.toml
+++ b/async/Cargo.toml
@@ -16,4 +16,5 @@ categories = ["web-programming", "asynchronous"]
 bytes = "^1"
 http = "^0.2"
 kvarn_utils = { path = "../utils" }
+# kvarn_utils = "^0.3"
 tokio = { version = "^1.13", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
