--- a/extensions/Cargo.toml
+++ b/extensions/Cargo.toml
@@ -12,8 +12,8 @@ categories = ["template-engine"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# kvarn = { path = "../", default-features = false }
-kvarn = { version = "^0.3", default-features = false }
+kvarn = { path = "../", default-features = false }
+# kvarn = { version = "^0.3", default-features = false }
 kvarn-fastcgi-client = { version = "^0.1", optional = true }
 tokio = { version = "^1.13", optional = true, features = ["net", "io-util"] }
 url-crawl = { version = "^0.1", optional = true }
@@ -28,5 +28,5 @@ reverse-proxy = ["tokio"]
 
 [dev-dependencies]
 tokio = { version = "^1.13", features = ["net", "io-util", "macros"] }
-# kvarn_testing = { path = "../testing" }
-kvarn_testing = "^0.3"
+kvarn_testing = { path = "../testing" }
+# kvarn_testing = "^0.3"
