--- a/.github/workflows/chute.yml
+++ b/.github/workflows/chute.yml
@@ -17,29 +17,29 @@ jobs:
     check:
         runs-on: ubuntu-latest
         steps:
+            - name: Checking out sources
+              uses: actions/checkout@v1
             - name: Installing Rust toolchain
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
-                  override: true
-            - name: Checking out sources
-              uses: actions/checkout@v1
             - uses: Swatinem/rust-cache@v1
-            - name: Checking project will all features
-              run: cargo clippy -- -D warnings
+            - name: Checking formatting
+              run: cargo fmt -- --check
+            - name: Checking lints
+              run: cargo clippy --all-targets -- -D warnings
 
     build:
         needs: [check]
         runs-on: ubuntu-latest
         steps:
+            - name: Checking out sources
+              uses: actions/checkout@v1
             - name: Installing Rust toolchain
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
-                  override: true
                   profile: minimal
-            - name: Checking out sources
-              uses: actions/checkout@v1
             - uses: Swatinem/rust-cache@v1
             - name: Compiling
               run: cargo rustc --release
