--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -23,35 +23,36 @@ jobs:
     check:
         runs-on: ubuntu-latest
         steps:
+            - name: Checking out sources
+              uses: actions/checkout@v1
             - name: Installing Rust toolchain
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
-                  override: true
-            - name: Checking out sources
-              uses: actions/checkout@v1
             - uses: Swatinem/rust-cache@v1
-            - name: Running rustfmt
+            - name: Checking formatting
               run: cargo fmt -- --check
-            - name: Checking project will all features
+            - name: Checking lints will all features
               run: cargo clippy --all-targets --all-features -- -D warnings
             - name: Checking doc references
-              run: test -z "$(cargo doc --no-deps --document-private-items -q 2>&1 | head -n 1)"
-            - name: Testing
+              uses: Icelk/rustdoc-link-check@v1
+              with:
+                  private: true
+                  working-directory: extensions
+            - name: Testing project
               run: cargo test
 
     build:
         needs: [check]
         runs-on: ubuntu-latest
         steps:
+            - name: Checking out sources
+              uses: actions/checkout@v1
             - name: Installing Rust toolchain
               uses: actions-rs/toolchain@v1
               with:
                   toolchain: stable
-                  override: true
                   profile: minimal
-            - name: Checking out sources
-              uses: actions/checkout@v1
             - uses: Swatinem/rust-cache@v1
             - name: Compiling
               run: cargo rustc --release -- --crate-type rlib
