--- a/chute/Cargo.toml
+++ b/chute/Cargo.toml
@@ -18,6 +18,7 @@ notify = "^4"
 unicode_categories = "^0.1"
 chrono = { version = "^0.4.19", optional = true }
 kvarn_utils = "^0.3"
+env_logger = "^0.9"
 
 [features]
 default = ["date"]
