--- a/.github/workflows/chute.yml
+++ b/.github/workflows/chute.yml
@@ -47,4 +47,4 @@ jobs:
               uses: actions/upload-artifact@v2
               with:
                   name: chute
-                  path: target/release/kvarn-chute
+                  path: target/release/chute
